# docs/swagger.json
@@ -13,6 +13,206 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+      "/posts": {
+        "get": {
+          "description": "Get all posts in the system",
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "posts"
+          ],
+          "summary": "Get all posts",
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/definitions/model.Post"
+                }
+              }
+            }
+          }
+        },
+        "post": {
+          "description": "Creates a new post and returns the created resource",
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "posts"
+          ],
+          "summary": "Create a new post",
+          "parameters": [
+            {
+              "description": "Post data",
+              "name": "post",
+              "in": "body",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/post.CreatePostRequest"
+              }
+            }
+          ],
+          "responses": {
+            "201": {
+              "description": "Created",
+              "schema": {
+                "$ref": "#/definitions/post.Response"
+              }
+            },
+            "400": {
+              "description": "Bad Request",
+              "schema": {
+                "$ref": "#/definitions/apperrors.InvalidInputError"
+              }
+            },
+            "409": {
+              "description": "Conflict",
+              "schema": {
+                "$ref": "#/definitions/apperrors.DuplicateError"
+              }
+            }
+          }
+        }
+      },
+      "/posts/{id}": {
+        "get": {
+          "description": "Get the post with the specified ID",
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "posts"
+          ],
+          "summary": "Get post by ID",
+          "parameters": [
+            {
+              "type": "string",
+              "description": "Post ID",
+              "name": "id",
+              "in": "path",
+              "required": true
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/post.Response"
+              }
+            },
+            "400": {
+              "description": "Bad Request",
+              "schema": {
+                "$ref": "#/definitions/apperrors.InvalidInputError"
+              }
+            },
+            "404": {
+              "description": "Not Found",
+              "schema": {
+                "$ref": "#/definitions/apperrors.NotFoundError"
+              }
+            }
+          }
+        },
+        "delete": {
+          "description": "Deletes an existing post",
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "posts"
+          ],
+          "summary": "Delete post by ID",
+          "parameters": [
+            {
+              "type": "string",
+              "format": "uuid",
+              "description": "Post ID",
+              "name": "id",
+              "in": "path",
+              "required": true
+            }
+          ],
+          "responses": {
+            "204": {
+              "description": "No Content"
+            },
+            "400": {
+              "description": "Bad Request",
+              "schema": {
+                "$ref": "#/definitions/apperrors.InvalidInputError"
+              }
+            },
+            "404": {
+              "description": "Not Found",
+              "schema": {
+                "$ref": "#/definitions/apperrors.NotFoundError"
+              }
+            }
+          }
+        },
+        "patch": {
+          "description": "Updates an existing post and returns the updated resource",
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "posts"
+          ],
+          "summary": "Update post by ID",
+          "parameters": [
+            {
+              "type": "string",
+              "format": "uuid",
+              "description": "Post ID",
+              "name": "id",
+              "in": "path",
+              "required": true
+            },
+            {
+              "description": "Post update data",
+              "name": "post",
+              "in": "body",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/post.UpdatePostRequest"
+              }
+            }
+          ],
+          "responses": {
+            "201": {
+              "description": "Created",
+              "schema": {
+                "$ref": "#/definitions/post.Response"
+              }
+            },
+            "400": {
+              "description": "Bad Request",
+              "schema": {
+                "$ref": "#/definitions/apperrors.DuplicateError"
+              }
+            },
+            "404": {
+              "description": "Not Found",
+              "schema": {
+                "$ref": "#/definitions/apperrors.NotFoundError"
+              }
+            }
+          }
+        }
+      },
         "/users": {
             "get": {
                 "description": "Get all users in the system",
@@ -29,7 +229,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                              "$ref": "#/definitions/model.User"
+                              "$ref": "#/definitions/user.Response"
                             }
                         }
                     }
@@ -103,7 +303,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                          "$ref": "#/definitions/model.User"
+                          "$ref": "#/definitions/user.Response"
                         }
                     },
                     "400": {
@@ -195,7 +395,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                          "$ref": "#/definitions/model.User"
+                          "$ref": "#/definitions/user.Response"
                         }
                     },
                     "400": {
@@ -253,7 +453,7 @@
                     "type": "string",
                     "example": "My First Post Content"
                 },
-                "created_at": {
+              "createdAt": {
                     "type": "string",
                     "example": "2025-07-18T15:04:05Z"
                 },
@@ -265,7 +465,7 @@
                     "type": "string",
                     "example": "My First Post"
                 },
-                "updated_at": {
+              "updatedAt": {
                     "type": "string",
                     "example": "2025-08-19T15:04:05Z"
                 },
@@ -273,8 +473,7 @@
                 "$ref": "#/definitions/model.User"
               },
                 "userID": {
-                    "type": "string",
-                    "example": "5e76b320-d5b7-4a0a-bb0f-2049fe3a91a4"
+                  "type": "string"
                 }
             }
         },
@@ -304,6 +503,73 @@
                     "example": "mike"
                 }
             }
+      },
+      "post.CreatePostRequest": {
+        "type": "object",
+        "required": [
+          "author_id",
+          "content",
+          "title"
+        ],
+        "properties": {
+          "author_id": {
+            "type": "string"
+          },
+          "content": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string"
+          }
+        }
+      },
+      "post.Response": {
+        "type": "object",
+        "properties": {
+          "author": {
+            "$ref": "#/definitions/post.UserSummaryResponse"
+          },
+          "content": {
+            "type": "string"
+          },
+          "created_at": {
+            "type": "string"
+          },
+          "post_id": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string"
+          },
+          "updated_at": {
+            "type": "string"
+          }
+        }
+      },
+      "post.UpdatePostRequest": {
+        "type": "object",
+        "properties": {
+          "content": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string"
+          }
+        }
+      },
+      "post.UserSummaryResponse": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string"
+          },
+          "user_id": {
+            "type": "string"
+          },
+          "username": {
+            "type": "string"
+          }
+        }
       },
       "user.CreateUserRequest": {
         "type": "object",
